# timherzig.github.io

./: README.md  _config.yml  about.md  education.md  index.html  publications.md  resources.md  resume.md  script.js
assets/: TransformerLens___PyTorch_Quick_Reference.tex
docs/: CNAME  about.md  index.html  publications.md  script.js  styles.css
docs/assets/: TransformerLens___PyTorch_Quick_Reference.md  pyproject.toml
